fix transactions bug; change exception handling